# DustRayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  DustRayTracer.sln  README.md  premake5.lua
DustRayTracer/: CMakeLists.txt  DustRayTracer.rc  DustRayTracer.vcxproj  DustRayTracer.vcxproj.filters  imgui.ini  kernel.cu  resource.h
DustRayTracer/reference/Cuda/: kernel.cu
DustRayTracer/src/Application/: Application.hpp
DustRayTracer/src/Application/private/: Application.cpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.hpp
DustRayTracer/src/Common/: dbg_macros.hpp  physical_units.hpp
DustRayTracer/src/Core/: BRDF.cu  BRDF.cuh  Bounds.cu  Bounds.cuh  HitPayload.cuh  ImportanceSampler.cu  ImportanceSampler.cuh  Interval.cu  Interval.cuh  PostProcess.cuh  PrincipledBSDF.cu  PrincipledBSDF.cuh  Ray.cuh  Renderer.cu  Renderer.hpp  Sampler.cuh
DustRayTracer/src/Core/BVH/: BVHBuilder.cu  BVHBuilder.cuh  BVHBuilder.hpp  BVHNode.cuh  BVHTraversal.cuh
DustRayTracer/src/Core/Common/: CudaCommon.cu  Managed.cuh
DustRayTracer/src/Core/CudaMath/: Color3.cuh  Random.cu  Random.cuh  cuda_mat.cu  cuda_mat.cuh  eeMatrix.cuh  helper_math.cuh
DustRayTracer/src/Core/Kernel/: RenderKernel.cu  RenderKernel.cuh  TraceRay.cu  TraceRay.cuh
DustRayTracer/src/Core/Kernel/Shaders/: AnyHit.cuh  ClosestHit.cuh  Debug.cuh  Intersection.cu  Intersection.cuh  Miss.cuh  RayGen.cuh
DustRayTracer/src/Core/Public/: DustRayTracer.hpp
DustRayTracer/src/Core/Scene/: Camera.cu  Camera.cuh  Camera.hpp  CameraData.cu  CameraData.cuh  HostCamera.cu  HostCamera.hpp  HostScene.hpp  Material.cu  Material.cuh  Mesh.cuh  RendererSettings.cpp  RendererSettings.h  RendererSettings.hpp  Scene.cu  Scene.cuh  SceneData.cuh  Texture.cu  Texture.cuh  Texture.hpp  Triangle.cuh  Vertex.cuh
DustRayTracer/src/Core/math/: Random.cu  Random.cuh  cuda_math.cuh  cuda_matrix.cu  cuda_matrix.cuh  math_ext.cu  math_ext.cuh
DustRayTracer/src/Editor/: EditorLayer.cpp  EditorLayer.hpp  Importer.cpp  Importer.h  Timer.cpp  Timer.hpp
DustRayTracer/src/Editor/Application/: Application.hpp
DustRayTracer/src/Editor/Application/private/: Application.cpp  Input.cpp  Input.hpp
DustRayTracer/src/Editor/Common/: CudaCommon.cu  Managed.cuh  dbg_macros.hpp
DustRayTracer/src/Editor/Panels/: MaterialManagerPanel.cpp  MaterialManagerPanel.hpp  RendererMetricsPanel.cpp  RendererMetricsPanel.hpp
DustRayTracer/src/Editor/Theme/: EditorTheme.cpp  EditorTheme.hpp
DustRayTracer/src/Main/: main.cpp
DustRayTracer/src/core/Application/: Application.hpp
DustRayTracer/src/core/Application/private/: Application.cpp  Input.cpp  Input.hpp
DustRayTracer/src/core/Common/: CudaCommon.cuh  Timer.hpp  physical_units.hpp
DustRayTracer/src/core/Editor/: ConsoleWindow.cpp  ConsoleWindow.hpp  EditorLayer.cu  EditorLayer.hpp
DustRayTracer/src/core/Editor/Common/: Managed.cuh
DustRayTracer/src/core/Editor/Theme/: EditorTheme.cpp  EditorTheme.hpp
DustRayTracer/src/core/Main/: main.cpp
DustRayTracer/src/core/Renderer/: Renderer.hpp
DustRayTracer/src/core/Renderer/private/: Renderer.cu
DustRayTracer/src/core/Renderer/private/Camera/: Camera.cu  Camera.cuh  Camera.hpp
DustRayTracer/src/core/Renderer/private/Kernel/: BVH.cu  BVH.cuh  HitPayload.cuh  Ray.cuh  RayTriangleIntersector.cuh  RenderKernel.cu  RenderKernel.cuh  RenderKernel.hpp  RendererSettings.h  Texture.cu  Texture.cuh  TraceRay.cu  TraceRay.cuh  Triangle.cuh
DustRayTracer/src/core/Renderer/private/Kernel/BVH/: BVHBuilder.cu  BVHBuilder.cuh  BVHNode.cuh  BVHTraversal.cuh
DustRayTracer/src/core/Renderer/private/Kernel/Shaders/: AnyHit.cuh  ClosestHit.cuh  Debug.cuh  Intersection.cu  Intersection.cuh  Miss.cuh  RayGen.cuh
DustRayTracer/src/core/Renderer/private/Shapes/: Bounds.cu  Bounds.cuh  Material.cu  Material.cuh  Mesh.cu  Mesh.cuh  Scene.cu  Scene.cuh  Triangle.cuh  Vertex.cuh
DustRayTracer/src/models/: cornell_box.glb  cornell_box.gltf  cs16_dust_2.glb  cs16_italy.glb  cube.glb  mcTownTest.glb  mcTransparencyTest_optimised.glb  mc_test.glb  multiMaterialMeshTest.glb  suzanne_plane.glb
DustRayTracer/src/reference/Cuda/: kernel.cu
models/: UVtextureTest.gltf  animemaid.glb  cs16_dust.glb  cs16_militia.glb  cube.gltf  cube_plane.glb  cycle_part.glb  dense_monkey.glb  g18.glb  hl_ichthyosaur.glb  hl_zombie.glb  ico_base.glb  lightweightRTtest.glb  mcTransparencyTest.glb  mcTransparencyTest_optimised.glb  mc_loc_test.glb  mc_test.glb  mp5.glb  room.glb  sceneHierTest.glb  small_light.glb  suzanne_plane.glb  suzanne_plane.gltf  temp.glb  valorant_ghost.glb  valorant_katana.glb
models/minecraft/: big_mc.glb  mcIndoor.glb  mcMidTest.glb  mcTransparencyTest.glb  mc_village.glb  mc_village_0.glb
models/source/: cs16_aztec.glb  cs16_cobblestone.glb  cs16_dust.glb  cs16_dust2.glb  cs16_vertigo.glb  hl2_gordon.glb  hl2_scoutcar.glb  hl_snarkpit.glb
models/test/: EmissiveTest.glb  UVtextureTest.glb  brdf_is.glb  bvhsplitTest.glb  emissive_test.glb  material_test.glb  mis_test.glb  mis_veach_test.glb  multiMaterialMeshTest.glb  sunshadowTest.glb  uvTextureCube.glb
